name:                semirings-modules
version:             0.0.0.0
synopsis:            Semirings & R-modules
-- description:
homepage:            https://github.com/robrix/semirings-modules
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2018 Rob Rix
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Module.Class
                     , Data.Semiring
                     , Data.Semiring.App
                     , Data.Semiring.Arith
                     , Data.Semiring.Boolean
                     , Data.Semiring.Class
                     , Data.Semiring.Mult
                     , Data.Semiring.Tropical
  build-depends:       base >=4.11 && <4.12
                     , containers
                     , hashable
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctests.hs
  default-language:    Haskell2010
  build-depends:       base
                     , doctest
                     , QuickCheck
                     , quickcheck-instances
